--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
